Refactored messaging